--- a/WebContent/css/buyForm.css
+++ b/WebContent/css/buyForm.css
@@ -32,7 +32,7 @@
   .tableName {
     font-weight:bold;
     font-size:17px;
-    padding-right:260px;
+    padding-right:230px;
   }
   
   .tableInImg{
@@ -107,4 +107,8 @@
   .backBtn {
     float:right;
     padding-top:1px;
+  }
+  
+  #backBtn{
+    border:0 none; padding:0; margin:0; background:transparent; *overflow:visible; cursor:pointer; cursor:pointer;
   }
